--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,11 @@
 @import './reset.less';
 
+html body {
+  max-width: 750PX; // 大写的PX不会被pxtorem自动转换
+  min-width: 320PX;
+  margin: 0 auto;
+}
+
 // 单行溢出隐藏
 .one-txt-cut {
   overflow: hidden;
